style: fix letter spacing issue caused by isomer-template CSS

--- a/src/styles/isomer-cms/elements/base.scss
+++ b/src/styles/isomer-cms/elements/base.scss
@@ -41,6 +41,7 @@ h1,h2,h3,h4,h5,h6{
   font-weight: 700 !important;
   margin: 0;
   padding: 0;
+  letter-spacing: 0 !important;
 }
 
 i {
